--- a/package.json
+++ b/package.json
@@ -70,15 +70,15 @@
     "gh-pages": "^1.0.0",
     "jest": "^21.2.1",
     "rc-slider": "^8.2.0",
-    "react": "^15.5.4",
+    "react": "^15.6.2",
     "react-addons-test-utils": "^15.6.0",
-    "react-dom": "^15.5.4",
+    "react-dom": "^15.6.2",
     "react-hot-loader": "^3.1.3",
     "react-router": "^3.0.0",
     "react-test-renderer": "^15.6.1",
     "rimraf": "^2.6.1",
     "sinon": "^2.3.2",
-    "webpack": "^3.3.0",
+    "webpack": "^3.12.0",
     "webpack-dev-server": "^2.5.1"
   },
   "peerDependencies": {
@@ -91,9 +91,14 @@
     "imagesloaded": "^4.1.1",
     "inline-style-prefixer": "^3.0.6",
     "invariant": "^2.2.2",
+    "path": "^0.12.7",
     "prop-types": "^15.5.10",
+    "react-bootstrap": "^0.32.4",
+    "react-form-login": "^1.1.4",
+    "react-redux": "^6.0.0",
     "react-sizeme": "^2.2.0",
     "react-transition-group": "^1.2.0",
+    "scss": "^0.2.4",
     "shallowequal": "^1.0.1"
   },
   "jest": {
